--- a/investment-portfolio-app/src/main/resources/application.properties
+++ b/investment-portfolio-app/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8080
+alphavantage.apikey=J3FGTKV1EQKH3WRM
