--- a/investment-portfolio-app/Dockerfile
+++ b/investment-portfolio-app/Dockerfile
@@ -1,4 +1,3 @@
-FROM eclipse-temurin:17-jdk
-VOLUME /tmp
+FROM openjdk:17-jdk-slim
 COPY target/investment-portfolio-app-1.0-SNAPSHOT.jar investment-portfolio-app.jar
-ENTRYPOINT ["java","-jar","/investment-portfolio-app.jar"]
+ENTRYPOINT ["java", "-jar", "investment-portfolio-app.jar"]
